--- a/resources/css/tailwind.css
+++ b/resources/css/tailwind.css
@@ -133,7 +133,7 @@
     }
 
     .dropdown .menuitem {
-        @apply flex justify-between px-4 py-3 text-gray-700 text-sm hover:bg-gray-100 w-full;
+        @apply flex justify-between px-4 py-3 text-gray-700 text-xs md:text-sm hover:bg-gray-100 w-full;
     }
 
     /* DROPDOWNS END */
